--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <section class="section">
         <h1>super dope gallery</h1>
         <div class="container"> 
-            <div class="lightbox"><img src="./images/Gaslamp, San Dieg.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/purple kush.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/Neon crown.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/model.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/Amtrak.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/3AB5F2D8-BC51-44E4-BA18-A941DDA74840.jpeg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/Aztec football gear.jpg" alt="This is the image description"></div>
-            <div class="lightbox"><img src="./images/flamingos.jpg" alt="This is the image description"></div>
+            <div class="lightbox"><img src="./images/Gaslamp, San Dieg.jpg" alt="downtown san diego"></div>
+            <div class="lightbox"><img src="./images/purple kush.jpg" alt="purple weed nug"></div>
+            <div class="lightbox"><img src="./images/Neon crown.jpg" alt="gold neon crown"></div>
+            <div class="lightbox"><img src="./images/model.jpg" alt="hot beach model"></div>
+            <div class="lightbox"><img src="./images/Amtrak.jpg" alt="blue amtrak train going under tunnel by shoreline"></div>
+            <div class="lightbox"><img src="./images/3AB5F2D8-BC51-44E4-BA18-A941DDA74840.jpeg" alt="saudi guy"></div>
+            <div class="lightbox"><img src="./images/Aztec football gear.jpg" alt="red football helmet"></div>
+            <div class="lightbox"><img src="./images/flamingos.jpg" alt="space flamingos"></div>
         </div>
 
     </section>
